# afrec

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
afrec/: __init__.py  cli.py  config.py  crypto.py  custody.py  downloader.py  explorer.py  integrity.py  logging_utils.py  reports.py  session.py  utils.py
docs/: Flujo_Tecnico.md  Metodologia_AFREC.md
tests/: test_filters.py  test_hashing.py
